fix text overlap when zoomed in issues

--- a/src/css/main.less
+++ b/src/css/main.less
@@ -1335,3 +1335,19 @@ hr {
     }
   }
 }
+
+.btn-primary-tair:hover, .btn-primary-tair:focus, .btn-primary-tair:active, .btn-primary-tair.active, .open .dropdown-toggle.btn-primary-tair {
+    color: #ffffff;
+    background-color: #333;
+    border-color: #333;
+}
+
+.visually-hidden {
+    clip-path: inset(100%);
+    clip: rect(1px, 1px, 1px, 1px);
+    height: 1px;
+    overflow: hidden;
+    position: absolute;
+    white-space: nowrap;
+    width: 1px;
+}
